syntax = "proto3";
package thenalab.tsc.tsc;

// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";
import "tsc/tsc.proto";

option go_package = "github.com/thenalab/tsc/x/tsc/types";

// GenesisState defines the tsc module's genesis state.
message GenesisState {
  // params defines all the parameters of related to tsc.
  Params params = 1 [(gogoproto.nullable) = false];
}
